# CM

./: .gitignore  Actor.cpp  Actor.h  Bob.cpp  Bob.h  CMakeLists.txt  CheckPoint.cpp  CheckPoint.h  Codes.cpp  Codes.h  Exit.cpp  Exit.h  Level.cpp  Level.h  Main.cpp  Mover.cpp  Mover.h  SpeechBubble.cpp  SpeechBubble.h  config_rel.sh  config_sf.sh
Blocks/: Block.cpp  Block.h  CMakeLists.txt  EpDoor.cpp  EpDoor.h  GemDoor.cpp  GemDoor.h  Rock.cpp  Rock.h
Boss1/: CMakeLists.txt  ChaseSpider.cpp  FireBullet.cpp  ShooterSpider.cpp  SpiderBoss.h  SpiderExit.cpp
Collectables/: CMakeLists.txt  Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  Crystal.cpp  Crystal.h  Dynamite.cpp  Dynamite.h  EpCrystal.cpp  EpCrystal.h  FakeExit.cpp  FakeExit.h  FireBoot.cpp  FireBoot.h  Hint.cpp  Hint.h  HourGlass.cpp  HourGlass.h  Item.cpp  Item.h  Life.cpp  Life.h  MagicRing.cpp  MagicRing.h  Switch.cpp  Switch.h  Trigger.cpp  Trigger.h  Web.cpp  Web.h
Enemy/: Boss.cpp  Boss.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Die.cpp  Die.h  Enemy.cpp  Enemy.h  Explosion.cpp  Explosion.h  Fire.cpp  Fire.h  Fireball.cpp  Fireball.h  Ghost.cpp  Ghost.h  Lava.cpp  Lava.h  Pit.cpp  Pit.h  Spider.cpp  Spider.h
Exits/: CMakeLists.txt  CheckPoint.cpp  CheckPoint.h  Exit.cpp  SpecialDoor.cpp  SpecialDoor.h
Extras/: Arc.cpp  CMakeLists.txt  Circle.cpp  Line.cpp  Line.h  ReaderClass.cpp  ReaderClass.h  utilities.cpp  utilities.h
Switches/: CMakeLists.txt  FakeExit.cpp  Hint.cpp  Light.cpp  Light.h  Switch.cpp  Switch.h  Trigger.cpp  Trigger.h  Web.cpp  Web.h
graphics/: split.sh
levels/: 0-1.txt  0-2.csv  0-3.csv  1-1.csv  1-1.csv.xlsx  1-2.csv  1-2.xlsx  1-3.csv  1-3.xlsx  1-4.csv  CMakeLists.txt  Doc1.csv  Doc2.csv  HUB1.csv  Level1-1.txt  Level_me_1.csv  Level_me_2.csv  Level_order.txt  autoscroll_level.txt  boss1_level.txt  continuous_level.txt  grid_level.txt  level.txt  level_1.1.txt  wrapped_level.txt
